--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VF Suplementos</title>
+    <meta name="description" content="VF Suplementos cuenta con la mejor selección de suplementos deportivos, desde proteínas en polvo (de suero de leche concentrado, proteínas isoladas y proteínas veganas), creatinas, hasta todo tipo de vitaminas. Con envío gratis a través de compras desde $45.000 con un regalo sorpresa incluido.">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- FontAwesome -->
