se agrega en cada html su respectiva etiqueta description

--- a/vistas/marcas.html
+++ b/vistas/marcas.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VF - Marcas</title>
+    <meta name="description" content="Variedad de marcas en nuestra gran selección de productos, entre ellas: Winkler Nutrition, USN, Universal, Muscletech, Rule 1, Gold Standart, entre otras.">
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome -->
