--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VF - Productos</title>
+    <meta name="description" content="Encuentra proteínas de suero de leche concentrado, isoladas, veganas. Monohidrato de creatina puro y/o micronizado, multivitamínicos, bebidas energéticas, barritas de proteína, entre otros.">
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome -->
