--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VF - Contacto</title>
+    <meta name="description" content="Ubícanos en el local N°150 dentro del Hotel Pucón, C. Clemente Holzapfel #190. Y en todas nuestras redes sociales, con el nombre de usuario @_vf_suplementos_">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- FontAwesome -->
