se agrega en cada html su respectiva etiqueta keywords

--- a/vistas/marcas.html
+++ b/vistas/marcas.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VF - Marcas</title>
     <meta name="description" content="Variedad de marcas en nuestra gran selección de productos, entre ellas: Winkler Nutrition, USN, Universal, Muscletech, Rule 1, Gold Standart, entre otras.">
+    <meta name="keywords" content="Gold Standart, Winkler Nutrition, Rule 1, Muscletech, Universal, UP, Suplementos, Suplementos Deportivos">
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome -->
