--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VF - Productos</title>
     <meta name="description" content="Encuentra proteínas de suero de leche concentrado, isoladas, veganas. Monohidrato de creatina puro y/o micronizado, multivitamínicos, bebidas energéticas, barritas de proteína, entre otros.">
+    <meta name="keywords" content="Proteina, Creatina, Omega 3, Pre Entreno, Aminoacidos, ZMA, Suplementos, Suplementos Deportivos">
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome -->
