se agrega icono

--- a/vistas/marcas.html
+++ b/vistas/marcas.html
@@ -8,6 +8,8 @@
     <title>VF - Marcas</title>
     <meta name="description" content="Variedad de marcas en nuestra gran selección de productos, entre ellas: Winkler Nutrition, USN, Universal, Muscletech, Rule 1, Gold Standart, entre otras.">
     <meta name="keywords" content="Gold Standart, Winkler Nutrition, Rule 1, Muscletech, Universal, UP, Suplementos, Suplementos Deportivos">
+    <!-- Icono -->
+    <link rel="icon" type="image/png" href="../img/icon/icono.png">
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome -->
@@ -45,6 +47,12 @@
     </nav>
 
     <div class="container mt-5">
+        <nav aria-label="breadcrumb" class="contenedor-beadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Marcas</li>
+            </ol>
+        </nav>
         <h3 class="d-flex justify-content-center">Marcas</h3>
         <div id="carouselExample" class="carousel slide mt-3 mb-3" data-ride="carousel" data-interval="3000">
             <div class="carousel-inner">
