--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -8,6 +8,8 @@
     <title>VF - Productos</title>
     <meta name="description" content="Encuentra proteínas de suero de leche concentrado, isoladas, veganas. Monohidrato de creatina puro y/o micronizado, multivitamínicos, bebidas energéticas, barritas de proteína, entre otros.">
     <meta name="keywords" content="Proteina, Creatina, Omega 3, Pre Entreno, Aminoacidos, ZMA, Suplementos, Suplementos Deportivos">
+    <!-- Icono -->
+    <link rel="icon" type="image/png" href="../img/icon/icono.png">
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome -->
@@ -45,6 +47,12 @@
     </nav>
 
     <main class="container my-4">
+        <nav aria-label="breadcrumb" class="contenedor-beadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Productos</li>
+            </ol>
+        </nav>
         <h6>Todos los productos</h6>
         <section class="card-deck d-flex justify-content-center my-3">
             <div class="row">
