--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>VF Suplementos</title>
     <meta name="description" content="VF Suplementos cuenta con la mejor selección de suplementos deportivos, desde proteínas en polvo (de suero de leche concentrado, proteínas isoladas y proteínas veganas), creatinas, hasta todo tipo de vitaminas. Con envío gratis a través de compras desde $45.000 con un regalo sorpresa incluido.">
     <meta name="keywords" content="VF Suplementos, Suplementos, Deportivos, Suplementos Deportivos, Creatina, Proteina, Omega 3, Aminoacidos, ">
+    <!-- Icono -->
+    <link rel="icon" type="image/png" href="img/icon/icono.png">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- FontAwesome -->
