--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -7,6 +7,8 @@
     <title>VF - Contacto</title>
     <meta name="description" content="Ubícanos en el local N°150 dentro del Hotel Pucón, C. Clemente Holzapfel #190. Y en todas nuestras redes sociales, con el nombre de usuario @_vf_suplementos_">
     <meta name="keywords" content="VF Suplementos, @_vf_suplementos_">
+    <!-- Icono -->
+    <link rel="icon" type="image/png" href="../img/icon/icono.png">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- FontAwesome -->
@@ -38,6 +40,12 @@
         </div>
     </nav>
     <main class="container py-3">
+        <nav aria-label="breadcrumb" class="contenedor-beadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Contacto</li>
+            </ol>
+        </nav>
         <h2>Formulario de Contacto</h2>
         <form action="#" class="px-5 py-5">
             <div class="form-group my-2">
