se optimizan las imagenes de la carpeta suplementos, se mantendran ambas carpetas para que el usuario pueda corroborar con el tamano de cada una

--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="card-deck d-flex justify-content-center my-3">
                     <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos/proteina-usn.jpg" alt="Proteína USN">
+                        <img class="card-img-top img" src="../img/suplementos-optimizados/proteina-usn.jpg" alt="Proteína USN">
                         <div class="card-body">
                             <h4 class="card-title">Proteína USN 5 lbs</h4>
                             <h5 class="card-title text-center">$49.000</h5>
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                     <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos/creatina-usn.jpg" alt="Creatina USN">
+                        <img class="card-img-top img" src="../img/suplementos-optimizados/creatina-usn.jpg" alt="Creatina USN">
                         <div class="card-body">
                             <h4 class="card-title">Creatina USN 60 servicios</h4>
                             <h5 class="card-title text-center">$31.000</h5>
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos/pre-entreno-w-nutrition.jpg" alt="Pre-Workout Winkler Nutrition">
+                        <img class="card-img-top img" src="../img/suplementos-optimizados/pre-entreno-w-nutrition.jpg" alt="Pre-Workout Winkler Nutrition">
                         <div class="card-body">
                             <h4 class="card-title">Pre-Workout W Nutrition</h4>
                             <h5 class="card-title">$21.000</h5>
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                     <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos/bcaa-universal.jpg" alt="BCAAs Universal">
+                        <img class="card-img-top img" src="../img/suplementos-optimizados/bcaa-universal.jpg" alt="BCAAs Universal">
                         <div class="card-body">
                             <h4 class="card-title">BCAAs Universal</h4>
                             <h5 class="card-title">$49.000</h5>
@@ -102,7 +102,7 @@
             <div class="row">
                 <div class="card-deck d-flex justify-content-center my-3">
                     <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos/nitrotech.jpg" alt="Nitrotech">
+                        <img class="card-img-top img" src="../img/suplementos-optimizados/nitrotech.jpg" alt="Nitrotech">
                         <div class="card-body">
                             <h4 class="card-title">Nitrotech</h4>
                             <h5 class="card-title text-center">$59.000</h5>
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos/bpi.jpg" alt="Protina BPI">
+                        <img class="card-img-top img" src="../img/suplementos-optimizados/bpi.jpg" alt="Protina BPI">
                         <div class="card-body">
                             <h4 class="card-title">Proteina BPI</h4>
                             <h5 class="card-title text-center">$42.490</h5>
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                     <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos/pro-win.jpg" alt="Pro-Win">
+                        <img class="card-img-top img" src="../img/suplementos-optimizados/pro-win.jpg" alt="Pro-Win">
                         <div class="card-body">
                             <h4 class="card-title">Pro-Win W Nutrition</h4>
                             <h5 class="card-title">$59.000</h5>
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                     <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos/syntha6.jpg" alt="Proteina Syntha 6">
+                        <img class="card-img-top img" src="../img/suplementos-optimizados/syntha6.jpg" alt="Proteina Syntha 6">
                         <div class="card-body">
                             <h4 class="card-title">Syntha 6</h4>
                             <h5 class="card-title">$61.000</h5>
@@ -146,7 +146,7 @@
             <div class="row">
                 <div class="card-deck d-flex justify-content-center my-3">
                     <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos/iso100.jpg" alt="ISO 100">
+                        <img class="card-img-top img" src="../img/suplementos-optimizados/iso100.jpg" alt="ISO 100">
                         <div class="card-body">
                             <h4 class="card-title">ISO 100</h4>
                             <h5 class="card-title text-center">$49.000</h5>
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                     <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos/l-arginina.jpg" alt="L-Arginina">
+                        <img class="card-img-top img" src="../img/suplementos-optimizados/l-arginina.jpg" alt="L-Arginina">
                         <div class="card-body">
                             <h4 class="card-title">L-Arginina</h4>
                             <h5 class="card-title text-center">$31.000</h5>
@@ -166,7 +166,7 @@
                         </div>
                     </div>
                     <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos/zma.png" alt="ZMA">
+                        <img class="card-img-top img" src="../img/suplementos-optimizados/zma.png" alt="ZMA">
                         <div class="card-body">
                             <h4 class="card-title">ZMA</h4>
                             <h5 class="card-title">$21.000</h5>
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                     <div class="card mx-1 text-center">
-                        <img class="card-img-top img" src="../img/suplementos/creatina-platinum.jpg" alt="Creatina platinum">
+                        <img class="card-img-top img" src="../img/suplementos-optimizados/creatina-platinum.jpg" alt="Creatina platinum">
                         <div class="card-body">
                             <h4 class="card-title">Creatina Platinum</h4>
                             <h5 class="card-title">$34.500</h5>
