se agregan etiquetas alt a las imagenes faltantes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
     <section class="container container-principal mt-2">
-        <img src="img/principal/suplementos-deportivos.jpg" class="img-principal" alt="">
+        <img src="img/principal/suplementos-deportivos.jpg" class="img-principal" alt="Imagen principal">
         <p class="texto-principal">VF SUPLEMENTOS</p>
     </section>
     <main class="container mt-5">
