--- a/vistas/marcas.html
+++ b/vistas/marcas.html
@@ -59,21 +59,21 @@
                 <div class="carousel-item active" data-bs-interval="3000">
                     <div class="d-flex justify-content-around card-deck">
                         <div class="card h-80">
-                            <img class="img" src="../img/marcas/gold-standart.jpg" alt="Card image cap">
+                            <img class="img" src="../img/marcas-optimizado/gold-standart.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Gold Standart</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum repellendus dolor libero, omnis voluptatum et?</p>
                             </div>
                         </div>
                         <div class="card h-100">
-                            <img class="img" src="../img/marcas/hexacore.jpg" alt="Card image cap">
+                            <img class="img" src="../img/marcas-optimizado//hexacore.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Hexacore</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga blanditiis magnam nesciunt illum nobis adipisci.</p>
                             </div>
                         </div>
                         <div class="card h-80">
-                            <img class="img" src="../img/marcas/usn.jpg" alt="Card image cap">
+                            <img class="img" src="../img/marcas-optimizado//usn.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">USN</h5>
                                 <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente enim ut nihil ex a ad?</p>
@@ -85,21 +85,21 @@
                 <div class="carousel-item" data-bs-interval="3000">
                     <div class="d-flex justify-content-around card-deck">
                         <div class="card h-100">
-                            <img class="img" src="../img/marcas/muscletech.png" alt="Card image cap">
+                            <img class="img" src="../img/marcas-optimizado/muscletech.png" alt="Muscletech">
                             <div class="card-body">
                                 <h5 class="card-title">Muscletech</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus placeat minus eius ab, saepe molestias.</p>
                             </div>
                         </div>
                         <div class="card h-100">
-                            <img class="img" src="../img/marcas/rule-one.png" alt="Card image cap">
+                            <img class="img" src="../img/marcas-optimizado/rule-one.png" alt="Rule 1">
                             <div class="card-body">
                                 <h5 class="card-title">Rule 1</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe optio expedita hic ex, incidunt deserunt.</p>
                             </div>
                         </div>
                         <div class="card h-100">
-                            <img class="img" src="../img/marcas/ultimate-nutrition.png" alt="Card image cap">
+                            <img class="img" src="../img/marcas-optimizado/ultimate-nutrition.png" alt="Ultimate Nutrition">
                             <div class="card-body">
                                 <h5 class="card-title">Ultimate Nutrition</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, perferendis. Unde aspernatur eos sunt corrupti!</p>
