--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
                         <a class="nav-link text-light" href="vistas/marcas.html"> Marcas </a>
                     </li>
                 </ul>
-                <a href="#" class="btn btn-primary d-flex btnCuenta" > Mi Cuenta </a>
+                <a href="#" class="btn btn-primary d-flex btn-cuenta" > Mi Cuenta </a>
             </div>
         </div>
     </nav>
     <section class="container container-principal mt-2">
-        <img src="img/principal/suplementos-deportivos.jpg" class="img-principal" alt="Imagen principal">
+        <img src="img/principal-optimizado/suplementos-deportivos.jpg" class="img-principal" alt="Imagen principal">
         <p class="texto-principal">VF SUPLEMENTOS</p>
     </section>
     <main class="container mt-5">
@@ -181,7 +181,7 @@
         <section class="card-deck d-flex justify-content-center m-3 text-center section-marcas">
             <div class="card card-marca">
                 <div class="card-body">
-                    <img src="img/marcas/hexacore.jpg" alt="" class="img productoImg">
+                    <img src="img/marcas/hexacore.jpg" alt="" class="img producto-img">
                 </div>
                 <div class="card-footer">
                     <p class="text-card">Hexacore</p>
@@ -189,7 +189,7 @@
             </div>
             <div class="card card-marca">
                 <div class="card-body">
-                    <img src="img/marcas/gold-standart.jpg" alt="" class="img productoImg">
+                    <img src="img/marcas/gold-standart.jpg" alt="" class="img producto-img">
                 </div>
                 <div class="card-footer">
                     <p class="text-card">Gold Standart</p>
@@ -197,7 +197,7 @@
             </div>
             <div class="card card-marca">
                 <div class="card-body">
-                    <img src="img/marcas/muscletech.png" alt="" class="img productoImg">
+                    <img src="img/marcas/muscletech.png" alt="" class="img producto-img">
                 </div>
                 <div class="card-footer">
                     <p class="text-card">Muscletech</p>
@@ -205,7 +205,7 @@
             </div>
             <div class="card card-marca">
                 <div class="card-body">
-                    <img src="img/marcas/rule-one.png" alt="" class="img productoImg">
+                    <img src="img/marcas/rule-one.png" alt="" class="img producto-img">
                 </div>
                 <div class="card-footer">
                     <p class="text-card">Rule 1</p>
@@ -213,7 +213,7 @@
             </div>
             <div class="card card-marca">
                 <div class="card-body">
-                    <img src="img/marcas/ultimate-nutrition.png" alt="" class="img productoImg">
+                    <img src="img/marcas/ultimate-nutrition.png" alt="" class="img producto-img">
                 </div>
                 <div class="card-footer">
                     <p class="text-card">Ultimate Nutrition</p>
@@ -221,7 +221,7 @@
             </div>
             <div class="card card-marca">
                 <div class="card-body">
-                    <img src="img/marcas/usn.jpg" alt="" class="img productoImg">
+                    <img src="img/marcas/usn.jpg" alt="" class="img producto-img">
                 </div>
                 <div class="card-footer">
                     <p class="text-card">USN</p>
