--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -35,7 +35,7 @@
                         <a class="nav-link texto-nav-footer" href="marcas.html"> Marcas </a>
                     </li>
                 </ul>
-                <a href="#" class="btn btn-primary d-flex btnCuenta" > Mi Cuenta </a>
+                <a href="#" class="btn btn-primary d-flex btn-cuenta" > Mi Cuenta </a>
             </div>
         </div>
     </nav>
