se agregan imagenes nuevas

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h4 class="text-center mt-3">Novedades</h4>
         <section class="card-deck d-flex bg-light justify-content-center py-5 my-3 rounded">
             <div class="card mx-1 text-center">
-                <img class="card-img-top img" src="img/suplementos/proteina-usn.jpg" alt="Proteína USN">
+                <img class="card-img-top img" src="img/suplementos-optimizados/proteina-usn.jpg" alt="Proteína USN">
                 <div class="card-body">
                     <h4 class="card-title">Proteína USN 5 lbs</h4>
                     <h5 class="card-title text-center">$49.000</h5>
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="card mx-1 text-center">
-                <img class="card-img-top img" src="img/suplementos/creatina-usn.jpg" alt="Creatina USN">
+                <img class="card-img-top img" src="img/suplementos-optimizados/creatina-usn.jpg" alt="Creatina USN">
                 <div class="card-body">
                     <h4 class="card-title">Creatina USN 60 servicios</h4>
                     <h5 class="card-title text-center">$31.000</h5>
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="card mx-1 text-center">
-                <img class="card-img-top img" src="img/suplementos/pre-entreno-w-nutrition.jpg" alt="Pre-Workout Winkler Nutrition">
+                <img class="card-img-top img" src="img/suplementos-optimizados/pre-entreno-w-nutrition.jpg" alt="Pre-Workout Winkler Nutrition">
                 <div class="card-body">
                     <h4 class="card-title">Pre-Workout W Nutrition</h4>
                     <h5 class="card-title">$21.000</h5>
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="card mx-1 text-center">
-                <img class="card-img-top img" src="img/suplementos/bcaa-universal.jpg" alt="BCAAs Universal">
+                <img class="card-img-top img" src="img/suplementos-optimizados/bcaa-universal.jpg" alt="BCAAs Universal">
                 <div class="card-body">
                     <h4 class="card-title">BCAAs Universal</h4>
                     <h5 class="card-title">$49.000</h5>
@@ -117,7 +117,7 @@
             <h4 class="mt-3">Productos más vendidos</h4>
             <aside class="card-deck d-flex justify-content-center m-3 text-center p-vendidos">
                 <div class="card mx-1 text-center">
-                    <img class="card-img-top img" src="img/suplementos/proteina-rule1.jpg" alt="Proteína Rule 1">
+                    <img class="card-img-top img" src="img/suplementos-optimizados/proteina-rule1.jpg" alt="Proteína Rule 1">
                     <div class="card-body">
                         <h4 class="card-title">Proteína Rule 1</h4>
                         <h5 class="card-title">$54.000</h5>
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="card mx-3 text-center" >
-                    <img class="card-img-top img" src="img/suplementos/proteina-hexacore.jpg" alt="Creatina Hexacore">
+                    <img class="card-img-top img" src="img/suplementos-optimizados/proteina-hexacore.jpg" alt="Creatina Hexacore">
                     <div class="card-body">
                         <h4 class="card-title">Creatina Hexacore</h4>
                         <h5 class="card-title">$39.000</h5>
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="card mx-3 text-center">
-                    <img class="card-img-top img" src="img/suplementos/omega3.jpg" alt="Omega 3">
+                    <img class="card-img-top img" src="img/suplementos-optimizados/omega3.jpg" alt="Omega 3">
                     <div class="card-body">
                         <h4 class="card-title">Omega 3</h4>
                         <h5 class="card-title">$26.000</h5>
@@ -147,9 +147,9 @@
                     </div>
                 </div>
                 <div class="card mx-1 text-center" >
-                    <img class="card-img-top img" src="img/suplementos/proteina-rule1.jpg" alt="Proteína Rule 1">
+                    <img class="card-img-top img" src="img/suplementos-optimizados/myprotein.jpg" alt="My Protein">
                     <div class="card-body">
-                        <h4 class="card-title">Proteína Rule 1</h4>
+                        <h4 class="card-title">My Protein</h4>
                         <h5 class="card-title">$54.000</h5>
                     </div>
                     <div class="card-footer">
@@ -157,9 +157,9 @@
                     </div>
                 </div>
                 <div class="card mx-3 text-center" >
-                    <img class="card-img-top img" src="img/suplementos/proteina-hexacore.jpg" alt="Creatina Hexacore">
+                    <img class="card-img-top img" src="img/suplementos-optimizados/king-whey.jpg" alt="King Whey">
                     <div class="card-body">
-                        <h4 class="card-title">Creatina Hexacore</h4>
+                        <h4 class="card-title">King Whey</h4>
                         <h5 class="card-title">$39.000</h5>
                     </div>
                     <div class="card-footer">
@@ -167,9 +167,9 @@
                     </div>
                 </div>
                 <div class="card mx-3 text-center">
-                    <img class="card-img-top img" src="img/suplementos/omega3.jpg" alt="Omega 3">
+                    <img class="card-img-top img" src="img/suplementos-optimizados/l-arginina-thor.jpg" alt="L-Arginina Thor">
                     <div class="card-body">
-                        <h4 class="card-title">Omega 3</h4>
+                        <h4 class="card-title">L-Arginina Thor</h4>
                         <h5 class="card-title">$26.000</h5>
                     </div>
                     <div class="card-footer">
