--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="css/estilos.css">
 </head>
@@ -39,13 +41,13 @@
             </div>
         </div>
     </nav>
-    <section class="container container-principal mt-2">
+    <section class="container container-principal mt-2" data-aos="zoom-out-up" data-aos-duration="3000">
         <img src="img/principal-optimizado/suplementos-deportivos.jpg" class="img-principal" alt="Imagen principal">
-        <p class="texto-principal">VF SUPLEMENTOS</p>
+        <p class="texto-principal" >VF SUPLEMENTOS</p>
     </section>
     <main class="container mt-5">
         <h4 class="text-center mt-3">Novedades</h4>
-        <section class="card-deck d-flex bg-light justify-content-center py-5 my-3 rounded">
+        <section class="card-deck d-flex bg-light justify-content-center py-5 my-3 rounded" data-aos="zoom-in-up" data-aos-duration="2000">
             <div class="card mx-1 text-center">
                 <img class="card-img-top img" src="img/suplementos-optimizados/proteina-usn.jpg" alt="Proteína USN">
                 <div class="card-body">
@@ -88,7 +90,7 @@
             </div>
         </section>
         <section class="card-deck d-flex bg-white justify-content-center my-2">
-            <div class="card mx-3 card-info">
+            <div class="card mx-3 card-info" data-aos="fade-right" data-aos-duration="2000">
                 <div class="card-header">
                     <h6 class="card-title">
                         Recomendaciones
@@ -100,7 +102,7 @@
                     </blockquote>
                 </div>
             </div>
-            <div class="card mx-3 card-info">
+            <div class="card mx-3 card-info" data-aos="fade-left" data-aos-duration="2000">
                 <div class="card-header">
                     <h6 class="card-title">
                         Retiro y Envío a Regiones
@@ -113,7 +115,7 @@
                 </div>
             </div>
         </section>
-        <section class="container text-center bg-light p-2 rounded">
+        <section class="container text-center bg-light p-2 rounded" data-aos="zoom-in" data-aos-duration="2000">
             <h4 class="mt-3">Productos más vendidos</h4>
             <aside class="card-deck d-flex justify-content-center m-3 text-center p-vendidos">
                 <div class="card mx-1 text-center">
@@ -178,7 +180,7 @@
                 </div>
             </aside>
         </section>
-        <section class="card-deck d-flex justify-content-center m-3 text-center section-marcas">
+        <section class="card-deck d-flex justify-content-center m-3 text-center section-marcas" data-aos="fade-right" data-aos-duration="1500">
             <div class="card card-marca">
                 <div class="card-body">
                     <img src="img/marcas/hexacore.jpg" alt="" class="img producto-img">
@@ -269,5 +271,9 @@
         </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
