--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg" data-aos="fade-down" data-aos-duration="3000">
         <div class="container">
             <a class="navbar-brand text-light ml-3" href="#"><h2>VF</h2></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,9 @@
         <h4 class="text-center mt-3">Novedades</h4>
         <section class="card-deck d-flex bg-light justify-content-center py-5 my-3 rounded" data-aos="zoom-in-up" data-aos-duration="2000">
             <div class="card mx-1 text-center">
-                <img class="card-img-top img" src="img/suplementos-optimizados/proteina-usn.jpg" alt="Proteína USN">
+                <div class="cont-img">
+                    <img class="card-img-top img" src="img/suplementos-optimizados/proteina-usn.jpg" alt="Proteína USN">
+                </div>
                 <div class="card-body">
                     <h4 class="card-title">Proteína USN 5 lbs</h4>
                     <h5 class="card-title text-center">$49.000</h5>
@@ -59,7 +61,9 @@
                 </div>
             </div>
             <div class="card mx-1 text-center">
-                <img class="card-img-top img" src="img/suplementos-optimizados/creatina-usn.jpg" alt="Creatina USN">
+                <div class="cont-img">
+                    <img class="card-img-top img" src="img/suplementos-optimizados/creatina-usn.jpg" alt="Creatina USN">
+                </div>
                 <div class="card-body">
                     <h4 class="card-title">Creatina USN 60 servicios</h4>
                     <h5 class="card-title text-center">$31.000</h5>
@@ -69,7 +73,9 @@
                 </div>
             </div>
             <div class="card mx-1 text-center">
-                <img class="card-img-top img" src="img/suplementos-optimizados/pre-entreno-w-nutrition.jpg" alt="Pre-Workout Winkler Nutrition">
+                <div class="cont-img">
+                    <img class="card-img-top img" src="img/suplementos-optimizados/pre-entreno-w-nutrition.jpg" alt="Pre-Workout Winkler Nutrition">
+                </div>
                 <div class="card-body">
                     <h4 class="card-title">Pre-Workout W Nutrition</h4>
                     <h5 class="card-title">$21.000</h5>
@@ -79,7 +85,9 @@
                 </div>
             </div>
             <div class="card mx-1 text-center">
-                <img class="card-img-top img" src="img/suplementos-optimizados/bcaa-universal.jpg" alt="BCAAs Universal">
+                <div class="cont-img">
+                    <img class="card-img-top img" src="img/suplementos-optimizados/bcaa-universal.jpg" alt="BCAAs Universal">
+                </div>
                 <div class="card-body">
                     <h4 class="card-title">BCAAs Universal</h4>
                     <h5 class="card-title">$49.000</h5>
@@ -233,10 +241,10 @@
     </main>
     <footer class="text-center text-lg-start text-muted bg-nav-footer">
         <section class="d-flex justify-content-center justify-content-lg-between p-4">
-            <div class="me-5 d-none d-lg-block">
+            <div class="me-5 d-none d-lg-block" data-aos="fade-up" data-aos-duration="1500">
                 <span class="texto-nav-footer">Síguenos en nuestras tedes sociales</span>
             </div>
-            <div class="texto-nav-footer">
+            <div class="texto-nav-footer" data-aos="fade-up" data-aos-duration="1500">
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-facebook-f"></i> </a>
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-twitter"></i> </a>
                 <a href="#" class="me-4 text-reset"> <i class="fab fa-google"></i> </a>
