--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
 <body>
     <nav class="navbar navbar-expand-lg" data-aos="fade-down" data-aos-duration="3000">
         <div class="container">
-            <a class="navbar-brand text-light ml-3" href="#"><h2>VF</h2></a>
+            <a class="navbar-brand nav-link ml-3" href="#"><h2>VF</h2></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto sp-between">
                     <li class="nav-item mx-4">
-                        <a class="nav-link text-light" aria-current="page" href="vistas/productos.html"> Productos </a>
+                        <a class="nav-link" aria-current="page" href="vistas/productos.html"> Productos </a>
                     </li>
                     <li class="nav-item mx-4">
-                        <a class="nav-link text-light" href="vistas/contacto.html"> Contacto </a>
+                        <a class="nav-link" href="vistas/contacto.html"> Contacto </a>
                     </li>
                     <li class="nav-item mx-4">
-                        <a class="nav-link text-light" href="vistas/marcas.html"> Marcas </a>
+                        <a class="nav-link" href="vistas/marcas.html"> Marcas </a>
                     </li>
                 </ul>
-                <a href="#" class="btn btn-primary d-flex btn-cuenta" > Mi Cuenta </a>
+                <a href="#" class="boton btn-cuenta d-flex" > Mi Cuenta </a>
             </div>
         </div>
     </nav>
