Se actualiza la barra de navegacion en todas las vistas

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="vistas/marcas.html"> Marcas </a>
                     </li>
                 </ul>
-                <a href="#" class="boton btn-cuenta d-flex" > Mi Cuenta </a>
+                <a href="#" class="boton d-flex" > Mi Cuenta </a>
             </div>
         </div>
     </nav>
@@ -57,7 +57,7 @@
                     <h5 class="card-title text-center">$49.000</h5>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-outline-success">Comprar</button>
+                    <button class="boton-comprar">Comprar</button>
                 </div>
             </div>
             <div class="card mx-1 text-center">
@@ -69,7 +69,7 @@
                     <h5 class="card-title text-center">$31.000</h5>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-outline-success">Comprar</button>
+                    <button class="boton-comprar">Comprar</button>
                 </div>
             </div>
             <div class="card mx-1 text-center">
@@ -81,7 +81,7 @@
                     <h5 class="card-title">$21.000</h5>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-outline-success">Comprar</button>
+                    <button class="boton-comprar">Comprar</button>
                 </div>
             </div>
             <div class="card mx-1 text-center">
@@ -93,7 +93,7 @@
                     <h5 class="card-title">$49.000</h5>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-outline-success">Comprar</button>
+                    <button class="boton-comprar">Comprar</button>
                 </div>
             </div>
         </section>
