--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -17,25 +17,25 @@
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg" data-aos="fade-down" data-aos-duration="3000">
         <div class="container">
-            <a class="navbar-brand text-light ml-3" href="../index.html"><h2>VF</h2></a>
+            <a class="navbar-brand nav-link ml-3" href="../index.html"><h2>VF</h2></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto sp-between">
                     <li class="nav-item mx-4">
-                        <a class="nav-link texto-nav-footer" aria-current="page" href="productos.html"> Productos </a>
+                        <a class="nav-link" aria-current="page" href="productos.html"> Productos </a>
                     </li>
-                    <li class="nav-item mx-4 texto-nav-footer">
-                        <a class="nav-link texto-nav-footer" href="#"> Contacto </a>
+                    <li class="nav-item mx-4">
+                        <a class="nav-link" href="#"> Contacto </a>
                     </li>
-                    <li class="nav-item mx-4 texto-nav-footer">
-                        <a class="nav-link texto-nav-footer" href="marcas.html"> Marcas </a>
+                    <li class="nav-item mx-4">
+                        <a class="nav-link" href="marcas.html"> Marcas </a>
                     </li>
                 </ul>
-                <a href="#" class="btn btn-primary d-flex btn-cuenta" > Mi Cuenta </a>
+                <a href="#" class="boton d-flex" > Mi Cuenta </a>
             </div>
         </div>
     </nav>
