--- a/vistas/marcas.html
+++ b/vistas/marcas.html
@@ -19,29 +19,25 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg" data-aos="fade-down" data-aos-duration="3000">
         <div class="container">
-            <a class="navbar-brand text-light ml-3" href="../index.html">
-                <h2>VF</h2>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <a class="navbar-brand nav-link ml-3" href="../index.html"><h2>VF</h2></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto sp-between">
                     <li class="nav-item mx-4">
-                        <a class="nav-link text-light" aria-current="page" href="productos.html"> Productos </a>
+                        <a class="nav-link" aria-current="page" href="productos.html"> Productos </a>
                     </li>
                     <li class="nav-item mx-4">
-                        <a class="nav-link text-light" href="../vistas/contacto.html"> Contacto </a>
+                        <a class="nav-link" href="contacto.html"> Contacto </a>
                     </li>
                     <li class="nav-item mx-4">
-                        <a class="nav-link text-light" href="#"> Marcas </a>
+                        <a class="nav-link" href="#"> Marcas </a>
                     </li>
                 </ul>
-                <a href="#" class="btn btn-primary d-flex btn-cuenta"> Mi Cuenta </a>
+                <a href="#" class="boton d-flex" > Mi Cuenta </a>
             </div>
         </div>
     </nav>
