--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -21,29 +21,20 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg" data-aos="fade-down" data-aos-duration="1500">
-        <div class="container">
-            <a class="navbar-brand nav-link ml-3" href="../index.html"><h2>VF</h2></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
-                <ul class="navbar-nav mx-auto sp-between">
-                    <li class="nav-item mx-4">
-                        <a class="nav-link" aria-current="page" href="#"> Productos </a>
-                    </li>
-                    <li class="nav-item mx-4">
-                        <a class="nav-link" href="contacto.html"> Contacto </a>
-                    </li>
-                    <li class="nav-item mx-4">
-                        <a class="nav-link" href="marcas.html"> Marcas </a>
-                    </li>
-                </ul>
-                <a href="#" class="boton d-flex" > Mi Cuenta </a>
-            </div>
+    <nav class="navbar">
+        <a href="../index.html" class="titulo-nav link-item"><h2>VF</h2></a>
+        <a href="#" class="toggle-button">
+            <i class="fa fa-bars" style="font-size: 35px;"></i>
+        </a>
+        <div class="nav-links">
+            <ul>
+                <li class="link-item"><a href="#">Productos</a></li>
+                <li class="link-item"><a href="contacto.html">Contacto</a></li>
+                <li class="link-item"><a href="marcas.html">Marcas</a></li>
+                <li><button>Cuenta</button></li>
+            </ul>
         </div>
     </nav>
-
     <main class="container my-4">
         <nav aria-label="breadcrumb" class="contenedor-beadcrumb">
             <ol class="breadcrumb">
@@ -233,9 +224,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+    <script src="../js/script.js"></script>
 
 </body>
 
