--- a/index.html
+++ b/index.html
@@ -39,6 +39,29 @@
         <p class="texto-principal" >VF SUPLEMENTOS</p>
     </section>
     <main class="container mt-5">
+
+        <section class="contenedor-articulos">
+            <div class="articulo">
+                <img class="card-img-top img" src="img/suplementos-optimizados/proteina-usn.jpg" alt="Proteína USN">
+                <h2>Titulo Ejemplo</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, veritatis.</p>
+                <button class="articulo-boton">Comprar</button>
+            </div>
+            <div class="articulo">
+                <img class="card-img-top img" src="img/suplementos-optimizados/proteina-usn.jpg" alt="Proteína USN">
+                <h2>Titulo Ejemplo</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, veritatis.</p>
+                <button class="articulo-boton">Comprar</button>
+            </div>
+            <div class="articulo">
+                <img class="card-img-top img" src="img/suplementos-optimizados/proteina-usn.jpg" alt="Proteína USN">
+                <h2>Titulo Ejemplo</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, veritatis.</p>
+                <button class="articulo-boton">Comprar</button>
+            </div>
+           
+        </section>
+
         <h4 class="text-center mt-3">Novedades</h4>
         <section class="card-deck d-flex bg-light justify-content-center py-5 my-3 rounded" data-aos="zoom-in-up" data-aos-duration="2000">
             <div class="card mx-1 text-center">
@@ -50,7 +73,7 @@
                     <h5 class="card-title text-center">$49.000</h5>
                 </div>
                 <div class="card-footer">
-                    <button class="boton-comprar">Comprar</button>
+                    <button class="articulo-boton">Comprar</button>
                 </div>
             </div>
             <div class="card mx-1 text-center">
@@ -62,7 +85,7 @@
                     <h5 class="card-title text-center">$31.000</h5>
                 </div>
                 <div class="card-footer">
-                    <button class="boton-comprar">Comprar</button>
+                    <button class="articulo-boton">Comprar</button>
                 </div>
             </div>
             <div class="card mx-1 text-center">
@@ -74,7 +97,7 @@
                     <h5 class="card-title">$21.000</h5>
                 </div>
                 <div class="card-footer">
-                    <button class="boton-comprar">Comprar</button>
+                    <button class="articulo-boton">Comprar</button>
                 </div>
             </div>
             <div class="card mx-1 text-center">
@@ -86,7 +109,7 @@
                     <h5 class="card-title">$49.000</h5>
                 </div>
                 <div class="card-footer">
-                    <button class="boton-comprar">Comprar</button>
+                    <button class="articulo-boton">Comprar</button>
                 </div>
             </div>
         </section>
@@ -104,17 +127,24 @@
                 </div>
             </div>
             <div class="card mx-3 card-info" data-aos="fade-left" data-aos-duration="2000">
-                <div class="card-header">
+                <article class="card-header">
                     <h6 class="card-title">
                         Retiro y Envío a Regiones
                     </h6> 
-                </div>
-                <div class="card-body">
+                </article>
+                <article class="card-body">
                     <blockquote class="blockquote mb-0">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                     </blockquote>
-                </div>
+                </article>
             </div>
+        </section>
+        <section class="section-absoluto">
+            <div class="absoluto-layer layer-bg"></div>
+                <div class="absoluto-layer layer-contenido">
+                    <h1>Compleméntalo con ejercicio</h1>
+                    <p>Recuerda que un suplemento NO funciona por arte de magia!</p>
+                </div>
         </section>
         <section class="container text-center bg-light p-2 rounded" data-aos="zoom-in" data-aos-duration="2000">
             <h4 class="mt-3">Productos más vendidos</h4>
@@ -126,7 +156,7 @@
                         <h5 class="card-title">$54.000</h5>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-outline-success">Comprar</button>
+                        <button class="articulo-boton">Comprar</button>
                     </div>
                 </div>
                 <div class="card mx-3 text-center" >
@@ -136,7 +166,7 @@
                         <h5 class="card-title">$39.000</h5>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-outline-success">Comprar</button>
+                        <button class="articulo-boton">Comprar</button>
                     </div>
                 </div>
                 <div class="card mx-3 text-center">
@@ -146,7 +176,7 @@
                         <h5 class="card-title">$26.000</h5>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-outline-success">Comprar</button>
+                        <button class="articulo-boton">Comprar</button>
                     </div>
                 </div>
                 <div class="card mx-1 text-center" >
@@ -156,7 +186,7 @@
                         <h5 class="card-title">$54.000</h5>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-outline-success">Comprar</button>
+                        <button class="articulo-boton">Comprar</button>
                     </div>
                 </div>
                 <div class="card mx-3 text-center" >
@@ -166,7 +196,7 @@
                         <h5 class="card-title">$39.000</h5>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-outline-success">Comprar</button>
+                        <button class="articulo-boton">Comprar</button>
                     </div>
                 </div>
                 <div class="card mx-3 text-center">
@@ -176,7 +206,7 @@
                         <h5 class="card-title">$26.000</h5>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-outline-success">Comprar</button>
+                        <button class="articulo-boton">Comprar</button>
                     </div>
                 </div>
             </aside>
